--- a/client/src/components/Resume/Resume.module.css
+++ b/client/src/components/Resume/Resume.module.css
@@ -1,8 +1,27 @@
 .resume_wrapper {
-  color: blue;
+  background-color: #fafafa;
+  text-align: left;
+}
+
+.bullet {
+  padding: 30px 30px 30px 30px;
 }
 
 .company_logo {
-  width: 175px;
-  height: 175px;
+  width: 150px;
+  height: 150px;
+}
+
+.companyName {
+  color: #cc2f32;
+  font-size: 28px;
+}
+
+.title {
+  color: #3258a1;
+  font-size: 20px;
+}
+
+.location {
+  font-size: 18px;
 }
