--- a/client/src/components/Resume/Resume.module.css
+++ b/client/src/components/Resume/Resume.module.css
@@ -25,3 +25,12 @@
 .location {
   font-size: 18px;
 }
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+  .company_logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
