--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -14,7 +14,51 @@
   width: 100vw;
   height: 100vh;
   z-index: 1;
-  background-color: white;
+}
+
+.center_img {
+  width: 785px;
+  height: 785px;
+  border-radius: 785px;
+  border: 1px grey solid;
+  background-color: transparent;
+  opacity: 0;
+}
+
+.center_spinner {
+  width: 750px;
+  height: 750px;
+  border-radius: 750px;
+  border: 1px grey solid;
+  background-color: transparent;
+}
+
+.center_spinner_top {
+  position: absolute;
+  width: 750px;
+  height: 750px;
+  border-radius: 750px;
+  border: 20px #661719 solid;
+  border-color: #661719 transparent;
+  background-color: transparent;
+}
+
+.center_spinner_bottom {
+  position: absolute;
+  width: 712px;
+  height: 712px;
+  border-radius: 712px;
+  border: 1px grey solid;
+  background-color: transparent;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.center_picture {
+  width: 100%;
+  height: 100%;
 }
 
 .slide_block {
@@ -28,4 +72,8 @@
   padding-bottom: 5vh;
   font-size: 100px;
   opacity: 0;
+}
+
+.split {
+  background-color: black;
 }
