--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -3,68 +3,15 @@
   height: 100vh;
 }
 
+.backdrop_split {
+  /* height: 100vh; */
+}
+
+/***** Slide Panel *****/
 .slide {
   position: absolute;
   width: 100vw;
   z-index: 2;
-}
-
-.backdrop {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  z-index: 1;
-}
-
-.center_img {
-  width: 785px;
-  height: 785px;
-  border-radius: 785px;
-  border: 1px grey solid;
-  background-color: transparent;
-  opacity: 0;
-}
-
-.center_spinner {
-  width: 750px;
-  height: 750px;
-  border-radius: 750px;
-  border: 1px grey solid;
-  background-color: transparent;
-}
-
-.center_spinner_top {
-  position: absolute;
-  width: 750px;
-  height: 750px;
-  border-radius: 750px;
-  border: 20px #661719 solid;
-  border-color: #661719 transparent;
-  background-color: transparent;
-}
-
-.center_spinner_bottom {
-  position: absolute;
-  width: 712px;
-  height: 712px;
-  border-radius: 712px;
-  border: 1px grey solid;
-  background-color: transparent;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.center_picture {
-  width: 100%;
-  height: 100%;
-}
-
-.slide_block {
-  background-color: #661719;
-  height: 33.3333vh;
-  left: -100vw;
 }
 
 .welcome {
@@ -76,4 +23,61 @@
 
 .split {
   background-color: black;
+}
+
+.slide_block {
+  background-color: #661719;
+  height: 33.3333vh;
+  left: -100vw;
+}
+
+/***** Backdrop *****/
+.backdrop {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+}
+
+.center_circle {
+  position: relative;
+  width: 40vw;
+  height: 40vw;
+  border-radius: 50%;
+  border: 1px grey solid;
+  background-color: transparent;
+  opacity: 0;
+}
+
+.center_spinner_border {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 38vw;
+  height: 38vw;
+  border-radius: 50%;
+  border: 1px grey solid;
+  background-color: transparent;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.center_spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 38vw;
+  height: 38vw;
+  border-radius: 50%;
+  border: 15px black solid;
+  border-color: #661719 white;
+}
+
+.center_picture {
+  width: 100%;
+  height: 100%;
 }
