--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -3,10 +3,6 @@
   height: 100vh;
 }
 
-.backdrop_split {
-  /* height: 100vh; */
-}
-
 /***** Slide Panel *****/
 .slide {
   position: absolute;
@@ -18,6 +14,10 @@
   color: white;
   padding-bottom: 5vh;
   font-size: 100px;
+  letter-spacing: 40px;
+}
+
+.welcome_text {
   opacity: 0;
 }
 
@@ -41,11 +41,11 @@
 
 .center_circle {
   position: relative;
-  width: 40vw;
-  height: 40vw;
+  width: 30vw;
+  height: 30vw;
   border-radius: 50%;
   border: 1px grey solid;
-  background-color: transparent;
+  background-color: lightgrey;
   opacity: 0;
 }
 
@@ -54,8 +54,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 38vw;
-  height: 38vw;
+  width: 28vw;
+  height: 28vw;
   border-radius: 50%;
   border: 1px grey solid;
   background-color: transparent;
@@ -70,14 +70,18 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 38vw;
-  height: 38vw;
+  width: 28vw;
+  height: 28vw;
   border-radius: 50%;
-  border: 15px black solid;
+  border: 15px grey solid;
   border-color: #661719 white;
+  opacity: 0;
 }
 
 .center_picture {
   width: 100%;
   height: 100%;
+  border-radius: 50%;
+  border: 15px white solid;
+  border-color: #661719;
 }
