--- a/client/src/components/Education/Education.module.css
+++ b/client/src/components/Education/Education.module.css
@@ -1,6 +1,8 @@
 .education_wrapper {
   background-color: #661719;
   height: 40vh;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
 }
 
 .education_logo {
