--- a/client/src/components/Resume/Resume.module.css
+++ b/client/src/components/Resume/Resume.module.css
@@ -1,10 +1,19 @@
 .resume_wrapper {
   background-color: #fafafa;
   text-align: left;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+}
+
+.resume_wrapper h1 {
+  letter-spacing: 1px;
+  font-weight: bold;
 }
 
 .bullet {
   padding: 30px 30px 30px 30px;
+  opacity: 0;
+  margin: 10px;
 }
 
 .company_logo {
@@ -15,6 +24,7 @@
 .companyName {
   color: #cc2f32;
   font-size: 28px;
+  margin: 0px;
 }
 
 .title {
