--- a/client/src/components/Projects/Project.module.css
+++ b/client/src/components/Projects/Project.module.css
@@ -3,3 +3,17 @@
   padding-bottom: 5vh;
   background-color: white;
 }
+
+.project_title {
+  margin-bottom: 40px;
+}
+
+.card {
+  overflow: hidden;
+  box-shadow: 5px 5px 10px lightgrey;
+}
+
+.card_img {
+  width: 100%;
+  height: 100%;
+}
