--- a/client/src/components/Projects/Project.module.css
+++ b/client/src/components/Projects/Project.module.css
@@ -1,6 +1,5 @@
 .project_wrapper {
-  padding-top: 5vh;
-  padding-bottom: 5vh;
+  padding: 5vh;
   background-color: white;
 }
 
@@ -8,12 +7,12 @@
   margin-bottom: 40px;
 }
 
-.card {
-  overflow: hidden;
-  box-shadow: 5px 5px 10px lightgrey;
+.project_row {
+  margin: 100px 0 100px 0;
 }
 
 .card_img {
-  width: 100%;
-  height: 100%;
+  width: 300px;
+  height: 300px;
+  box-shadow: 10px 10px 10px lightgray;
 }
