--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
+
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 code {
