--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -1,6 +1,7 @@
 .background {
   background-color: white;
   height: 100vh;
+  width: 100vw;
 }
 
 /***** Slide Panel *****/
@@ -32,17 +33,64 @@
 }
 
 /***** Backdrop *****/
-.backdrop {
+.grid {
+  position: absolute;
+  z-index: 2;
+  display: grid;
+  grid-template-columns: 20vw 60vw 20vw;
+  grid-template-rows: 5vh 80vh 5vh;
+  grid-template-areas:
+    "nav nav nav"
+    "center center center"
+    "footer footer footer";
+}
+
+.navbar_row {
+  grid-area: nav;
+}
+
+.center {
+  background-color: transparent;
+  grid-area: "center";
+}
+
+.bottom {
+  grid-area: footer;
+  text-align: center;
+  position: absolute;
+  margin: 0 auto;
+  top: -25vh;
+  width: 100vw;
+  z-index: 0;
+}
+
+.bottom h1 {
+  font-size: calc(5vw + 20vh);
+  color: #dbdbdb;
+  letter-spacing: 50px;
+  opacity: 0.3;
+}
+
+/***** Backdrop *****/
+.center {
   position: absolute;
   width: 100vw;
   height: 100vh;
   z-index: 1;
 }
 
+.flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 .center_circle {
   position: relative;
-  width: 30vw;
-  height: 30vw;
+  width: 800px;
+  height: 800px;
   border-radius: 50%;
   border: 1px grey solid;
   background-color: lightgrey;
@@ -54,15 +102,12 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 28vw;
-  height: 28vw;
+  width: 750px;
+  height: 750px;
   border-radius: 50%;
   border: 1px grey solid;
   background-color: transparent;
   overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .center_spinner {
@@ -70,18 +115,40 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 28vw;
-  height: 28vw;
+  width: 750px;
+  height: 750px;
   border-radius: 50%;
-  border: 15px grey solid;
+  border: 20px lightgray solid;
   border-color: #661719 white;
   opacity: 0;
 }
 
 .center_picture {
-  width: 100%;
-  height: 100%;
+  width: 750px;
+  height: 750px;
   border-radius: 50%;
   border: 15px white solid;
   border-color: #661719;
 }
+
+.name {
+  position: absolute;
+  top: 45vh;
+  left: 68vw;
+  z-index: 3;
+  color: #3258a1;
+
+  font-size: calc(1vw + 5vh);
+  font-weight: bolder;
+  letter-spacing: -6px;
+  line-height: 70px;
+  text-align: left;
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+/* @media only screen and (min-width: 2500px) {
+  .center_circle {
+    width: 32vw;
+    height: 32vw;
+  }
+} */
