--- a/client/src/components/About/About.module.css
+++ b/client/src/components/About/About.module.css
@@ -3,109 +3,39 @@
   padding-bottom: 5vh;
 }
 
-.img {
-  padding: 0px;
+.about_title {
+  margin-bottom: 40px;
 }
 
-.content {
-  grid-template-columns: repeat(12, 1fr);
-  grid-auto-rows: minmax(60px, auto);
-  grid-gap: 1px;
-  display: grid;
-  max-width: 960;
-  margin: 0 auto;
-  color: white;
+.flex {
+  display: flex;
+  width: 100vw;
+  height: 100%;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.content div {
+.flex_item {
   overflow: hidden;
 }
 
-.content div img {
-  height: 100%;
-  width: 100%;
-  background-size: 100% 100%;
+.flex_item img {
+  width: 400px;
+  height: 400px;
+}
 
+.flex img {
   -webkit-filter: grayscale(100%);
   -moz-filter: grayscale(100%);
   filter: grayscale(100%);
   transition: all 0.5s ease;
 }
 
-.content div img:hover {
+.flex img:hover {
   -webkit-filter: grayscale(0);
   -moz-filter: grayscale(0);
   filter: grayscale(0);
   transform: scale(1.2);
   transition: all 0.5s ease;
-}
-
-.one {
-  grid-column: 1/5;
-  grid-row: 1/4;
-}
-
-.two {
-  grid-column: 5/7;
-  grid-row: 1/5;
-}
-
-.three {
-  grid-column: 7/9;
-  grid-row: 1/2;
-}
-
-.four {
-  grid-column: 9/13;
-  grid-row: 1/2;
-}
-
-.five {
-  grid-column: 7/9;
-  grid-row: 2/5;
-}
-
-.six {
-  grid-column: 9/11;
-  grid-row: 2/5;
-}
-
-.seven {
-  grid-column: 11/13;
-  grid-row: 2/5;
-}
-
-.eight {
-  grid-column: 1/3;
-  grid-row: 4/9;
-}
-
-.nine {
-  grid-column: 3/5;
-  grid-row: 4/6;
-}
-
-.ten {
-  grid-column: 3/5;
-  grid-row: 6/9;
-}
-
-.eleven {
-  grid-column: 9/13;
-  grid-row: 5/9;
-}
-
-.twelve {
-  grid-column: 1/5;
-  grid-row: 9/13;
-}
-
-.thirteen {
-  grid-column: 5/9;
-  grid-row: 5/13;
-}
-
-.fourteen {
-  grid-column: 9/13;
-  grid-row: 9/13;
 }
