--- a/client/src/components/Nav/Navbar.module.css
+++ b/client/src/components/Nav/Navbar.module.css
@@ -26,4 +26,20 @@
 
 .navbar_button:focus {
   outline: 0px;
+  border-color: rgb(255, 255, 255);
+}
+
+.navbar_toggler {
+  border-color: rgb(255, 255, 255);
+}
+
+.navbar_toggler_icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar_toggler:focus,
+.navbar_toggler:active,
+.navbar_toggler_icon:focus {
+  outline: none;
+  box-shadow: none;
 }
