--- a/client/src/components/Resume/Resume.module.css
+++ b/client/src/components/Resume/Resume.module.css
@@ -9,6 +9,7 @@
   letter-spacing: 1px;
   font-weight: bold;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .bullet {
@@ -35,6 +36,15 @@
 
 .location {
   font-size: 18px;
+}
+
+/* Large devices (laptops/desktops, 600px and up) */
+@media only screen and (max-width: 600px) {
+  .company_logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
