--- a/client/src/components/About/About.module.css
+++ b/client/src/components/About/About.module.css
@@ -1,10 +1,15 @@
 .about_wrapper {
   padding-top: 5vh;
   padding-bottom: 5vh;
+  background-color: #fafafa;
 }
 
-.about_title {
+.about_title h1 {
+  font-size: 50px;
+  letter-spacing: 1px;
+  font-weight: bold;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .flex {
@@ -38,4 +43,25 @@
   filter: grayscale(0);
   transform: scale(1.2);
   transition: all 0.5s ease;
+}
+
+@media only screen and (max-width: 992px) {
+  .flex_item img {
+    width: 200px;
+    height: 200px;
+
+    -webkit-filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+    filter: grayscale(0%);
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1200px) {
+  .flex_item img {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@media only screen and (min-width: 1200px) and (max-width: 1500px) {
 }
