--- a/client/src/components/Education/Education.module.css
+++ b/client/src/components/Education/Education.module.css
@@ -25,6 +25,10 @@
 .title {
   color: white;
   margin-bottom: 40px;
+  font-size: 50px;
+  letter-spacing: 1px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .school_name {
