--- a/client/src/components/Projects/Project.module.css
+++ b/client/src/components/Projects/Project.module.css
@@ -25,6 +25,18 @@
   box-shadow: 10px 10px 10px lightgray;
 }
 
+.title_red {
+  color: #cc2f32;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.title_blue {
+  font-size: 35px;
+  font-weight: bold;
+  color: #3258a1;
+}
+
 @media only screen and (max-width: 992px) {
   .card_img {
     margin-bottom: 50px;
