--- a/client/src/components/Projects/Project.module.css
+++ b/client/src/components/Projects/Project.module.css
@@ -19,10 +19,14 @@
   align-items: center;
 }
 
+.project_row p {
+  text-align: left;
+}
+
 .card_img {
   width: 300px;
   height: 300px;
-  box-shadow: 10px 10px 10px lightgray;
+  box-shadow: 10px 10px 10px darkgrey;
 }
 
 .title_red {
