--- a/client/src/components/Landing/Landing.module.css
+++ b/client/src/components/Landing/Landing.module.css
@@ -63,7 +63,7 @@
   text-align: center;
   position: absolute;
   margin: 0 auto;
-  top: -20vh;
+  top: -18vh;
   width: 100vw;
   z-index: 0;
 }
@@ -73,6 +73,7 @@
   color: #dbdbdb;
   letter-spacing: 50px;
   opacity: 0.3;
+  font-weight: bold;
 }
 
 /***** Flex *****/
@@ -136,9 +137,9 @@
   color: #3258a1;
 
   font-size: calc(1vw + 5vh);
-  font-weight: bolder;
+  font-weight: bold;
   letter-spacing: -6px;
-  line-height: 70px;
+  line-height: 75px;
   text-align: left;
 }
 
